feat: resolve IDEA 2026.1 inspection warnings